@@ -16,7 +16,6 @@
 package org.ballerinalang.langserver.codeaction.providers;
 
 import io.ballerina.compiler.api.SemanticModel;
-import io.ballerina.compiler.api.symbols.ParameterSymbol;
 import io.ballerina.compiler.api.symbols.Symbol;
 import io.ballerina.compiler.api.symbols.SymbolKind;
 import io.ballerina.compiler.api.symbols.TypeDescKind;
@@ -26,8 +25,12 @@ import io.ballerina.compiler.syntax.tree.AssignmentStatementNode;
 import io.ballerina.compiler.syntax.tree.BracedExpressionNode;
 import io.ballerina.compiler.syntax.tree.CompoundAssignmentStatementNode;
 import io.ballerina.compiler.syntax.tree.FieldAccessExpressionNode;
+import io.ballerina.compiler.syntax.tree.ModuleMemberDeclarationNode;
 import io.ballerina.compiler.syntax.tree.Node;
+import io.ballerina.compiler.syntax.tree.NodeVisitor;
 import io.ballerina.compiler.syntax.tree.NonTerminalNode;
+import io.ballerina.compiler.syntax.tree.SimpleNameReferenceNode;
+import io.ballerina.compiler.syntax.tree.StatementNode;
 import io.ballerina.compiler.syntax.tree.SyntaxKind;
 import io.ballerina.tools.diagnostics.Location;
 import io.ballerina.tools.text.LineRange;
@@ -37,6 +40,7 @@ import org.ballerinalang.formatter.core.Formatter;
 import org.ballerinalang.formatter.core.FormatterException;
 import org.ballerinalang.langserver.codeaction.CodeActionNodeValidator;
 import org.ballerinalang.langserver.codeaction.CodeActionUtil;
+import org.ballerinalang.langserver.codeaction.ExpressionNodeValidator;
 import org.ballerinalang.langserver.codeaction.ExtractToFunctionStatementAnalyzer;
 import org.ballerinalang.langserver.command.visitors.IsolatedBlockResolver;
 import org.ballerinalang.langserver.common.constants.CommandConstants;
@@ -47,10 +51,12 @@ import org.ballerinalang.langserver.common.utils.NameUtil;
 import org.ballerinalang.langserver.common.utils.PositionUtil;
 import org.ballerinalang.langserver.common.utils.SymbolUtil;
 import org.ballerinalang.langserver.commons.CodeActionContext;
+import org.ballerinalang.langserver.commons.capability.LSClientCapabilities;
 import org.ballerinalang.langserver.commons.codeaction.spi.RangeBasedCodeActionProvider;
 import org.ballerinalang.langserver.commons.codeaction.spi.RangeBasedPositionDetails;
 import org.eclipse.lsp4j.CodeAction;
 import org.eclipse.lsp4j.CodeActionKind;
+import org.eclipse.lsp4j.Command;
 import org.eclipse.lsp4j.Position;
 import org.eclipse.lsp4j.Range;
 import org.eclipse.lsp4j.TextEdit;
@@ -59,7 +65,9 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -77,8 +85,7 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
     private static final String EXTRACTED_PREFIX = "extracted";
 
     private static final Set<SyntaxKind> unSupportedModuleLevelSyntaxKinds = Set.of(SyntaxKind.CONST_DECLARATION,
-            SyntaxKind.MODULE_XML_NAMESPACE_DECLARATION, SyntaxKind.ENUM_DECLARATION, SyntaxKind.TYPE_DEFINITION, 
-            SyntaxKind.MODULE_CLIENT_DECLARATION);
+            SyntaxKind.MODULE_XML_NAMESPACE_DECLARATION, SyntaxKind.ENUM_DECLARATION, SyntaxKind.TYPE_DEFINITION);
 
     @Override
     public boolean validate(CodeActionContext context, RangeBasedPositionDetails positionDetails) {
@@ -164,7 +171,8 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
             return Collections.emptyList();
         }
 
-        Optional<ArgListsHolder> argLists = getArgLists(context, argsSymbolsForExtractFunction.get());
+        Optional<ArgListsHolder> argLists = getArgLists(context, argsSymbolsForExtractFunction.get(),
+                matchedCodeActionNode);
         if (argLists.isEmpty()) {
             return Collections.emptyList();
         }
@@ -217,7 +225,8 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
         CodeAction codeAction = CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_FUNCTION,
                 List.of(extractFunctionEdit, replaceFunctionCallEdit), context.fileUri(),
                 CodeActionKind.RefactorExtract);
-
+        CodeActionUtil.addRenamePopup(context, codeAction, CommandConstants.RENAME_COMMAND_TITLE_FOR_FUNCTION,
+                replaceFuncCallStartPos);
         return List.of(codeAction);
     }
 
@@ -295,7 +304,7 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
      * This method finds the visible variable and parameter symbols which are referred inside the selected range for
      * getCodeActionsForStatements scenario.
      */
-    private Optional<List<Symbol>> getVarAndParamSymbolsWithinRangeForStmts(CodeActionContext context, 
+    private Optional<List<Symbol>> getVarAndParamSymbolsWithinRangeForStmts(CodeActionContext context,
                                                                             Node enclosingNode) {
         List<Symbol> argsSymbolsForExtractFunction = new ArrayList<>();
         List<Symbol> visibleSymbols = getVisibleSymbols(context, context.range().getStart());
@@ -349,44 +358,97 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
         boolean newLineAtEnd = addNewLineAtEnd(enclosingNode);
         functionInsertRange = PositionUtil.toRange(enclosingNode.lineRange().endLine());
 
-        Optional<TypeSymbol> typeSymbol = context.currentSemanticModel().get().typeOf(matchedCodeActionNode);
+        // Check if the selection is a range or a position, and whether quick picks are supported by the client
+        LSClientCapabilities lsClientCapabilities = context.languageServercontext().get(LSClientCapabilities.class);
+        if (CodeActionUtil.isRangeSelection(context.range())
+                || !lsClientCapabilities.getInitializationOptions().isQuickPickSupported()) {
 
-        if (typeSymbol.isEmpty() || typeSymbol.get().typeKind() == TypeDescKind.COMPILATION_ERROR) {
+            Optional<TypeSymbol> typeSymbol = context.currentSemanticModel().get().typeOf(matchedCodeActionNode);
+
+            if (typeSymbol.isEmpty() || typeSymbol.get().typeKind() == TypeDescKind.COMPILATION_ERROR) {
+                return Collections.emptyList();
+            }
+
+            Optional<List<Symbol>> varAndParamSymbolsWithinRange =
+                    getVarAndParamSymbolsWithinRangeForExprs(matchedCodeActionNode.lineRange(), context);
+
+            if (varAndParamSymbolsWithinRange.isEmpty()) {
+                return Collections.emptyList();
+            }
+
+            Optional<ArgListsHolder> argLists = getArgLists(context, varAndParamSymbolsWithinRange.get(),
+                    matchedCodeActionNode);
+
+            if (argLists.isEmpty()) {
+                return Collections.emptyList();
+            }
+
+            List<String> argsForExtractFunction = argLists.get().extractFunctionArgs;
+            List<String> argsForReplaceFunctionCall = argLists.get().replaceFunctionCallArgs;
+
+            List<TextEdit> textEdits = getTextEdits(context, matchedCodeActionNode, newLineAtEnd, typeSymbol.get(),
+                    argsForExtractFunction, argsForReplaceFunctionCall, functionInsertRange);
+
+            // Selection is a range
+            CodeAction codeAction = CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_FUNCTION,
+                    textEdits, context.fileUri(), CodeActionKind.RefactorExtract);
+            CodeActionUtil.addRenamePopup(context, codeAction, CommandConstants.RENAME_COMMAND_TITLE_FOR_FUNCTION,
+                    textEdits.get(1).getRange().getStart());
+            return Collections.singletonList(codeAction);
+        }
+
+        ExpressionNodeValidator nodeValidator = new ExpressionNodeValidator();
+        matchedCodeActionNode.accept(nodeValidator);
+        if (nodeValidator.isInvalidNode()) {
             return Collections.emptyList();
         }
 
-        Optional<List<Symbol>> varAndParamSymbolsWithinRange =
-                getVarAndParamSymbolsWithinRangeForExprs(matchedCodeActionNode.lineRange(), context);
+        // Selection is a position
+        LinkedHashMap<String, List<TextEdit>> textEditMap = new LinkedHashMap<>();
+        LinkedHashMap<String, Position> renamePositionMap = new LinkedHashMap<>();
 
-        if (varAndParamSymbolsWithinRange.isEmpty()) {
-            return Collections.emptyList();
+        // List out the expression node list that we are going to provide quick pick support
+        // Find the arg list for each of the expression nodes
+
+        List<NonTerminalNode> nodeList = getPossibleExpressionNodes(matchedCodeActionNode);
+        nodeList.forEach(extractableNode -> {
+            Optional<TypeSymbol> tSymbol = context.currentSemanticModel()
+                    .flatMap(semanticModel -> semanticModel.typeOf(extractableNode));
+            if (tSymbol.isEmpty() || tSymbol.get().typeKind() == TypeDescKind.COMPILATION_ERROR) {
+                return;
+            }
+            String key = extractableNode.toSourceCode().strip();
+            Optional<List<Symbol>> varAndParamSymbolsWithinRange =
+                    getVarAndParamSymbolsWithinRangeForExprs(extractableNode.lineRange(), context);
+            if (varAndParamSymbolsWithinRange.isEmpty()) {
+                return;
+            }
+            Optional<ArgListsHolder> argListsHolder = getArgLists(context,
+                    varAndParamSymbolsWithinRange.get(), extractableNode);
+            if (argListsHolder.isEmpty()) {
+                return;
+            }
+            textEditMap.put(key,
+                    getTextEdits(context, extractableNode, newLineAtEnd,
+                            tSymbol.get(),
+                            argListsHolder.get().extractFunctionArgs,
+                            argListsHolder.get().replaceFunctionCallArgs, functionInsertRange));
+            renamePositionMap.put(key, PositionUtil.toRange(extractableNode.lineRange()).getStart());
+        });
+
+        if (lsClientCapabilities.getInitializationOptions().isPositionalRefactorRenameSupported()) {
+            return Collections.singletonList(CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_FUNCTION,
+                    new Command(NAME, CommandConstants.EXTRACT_COMMAND,
+                            List.of(NAME, context.filePath().toString(), textEditMap, renamePositionMap)),
+                    CodeActionKind.RefactorExtract));
         }
 
-        Optional<ArgListsHolder> argLists = getArgLists(context, varAndParamSymbolsWithinRange.get());
-
-        if (argLists.isEmpty()) {
-            return Collections.emptyList();
-        }
-
-        List<String> argsForExtractFunction = argLists.get().extractFunctionArgs;
-        List<String> argsForReplaceFunctionCall = argLists.get().replaceFunctionCallArgs;
-
-        String functionName = getFunctionName(context, matchedCodeActionNode);
-        String function = getFunction(context, matchedCodeActionNode, newLineAtEnd, typeSymbol.get(), functionName,
-                argsForExtractFunction);
-
-        String replaceFunctionCall = getReplaceFunctionCall(argsForReplaceFunctionCall, functionName, true);
-
-        TextEdit extractFunctionEdit = new TextEdit(functionInsertRange, function);
-        TextEdit replaceEdit = new TextEdit(PositionUtil.toRange(matchedCodeActionNode.lineRange()),
-                replaceFunctionCall);
-        CodeAction codeAction = CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_FUNCTION,
-                List.of(extractFunctionEdit, replaceEdit), context.fileUri(), CodeActionKind.RefactorExtract);
-
-        return List.of(codeAction);
+        return Collections.singletonList(CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_FUNCTION,
+                new Command(NAME, CommandConstants.EXTRACT_COMMAND,
+                        List.of(NAME, context.filePath().toString(), textEditMap)), CodeActionKind.RefactorExtract));
     }
 
-    private String getFunctionName(CodeActionContext context, NonTerminalNode matchedNode) {
+    private String getFunctionName(CodeActionContext context, Node matchedNode) {
         Set<String> visibleSymbolNames = getVisibleSymbols(context,
                 PositionUtil.toPosition(matchedNode.lineRange().endLine())).stream()
                 .map(Symbol::getName)
@@ -395,6 +457,45 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
                 .collect(Collectors.toSet());
 
         return NameUtil.generateTypeName(EXTRACTED_PREFIX, visibleSymbolNames);
+    }
+
+    private List<NonTerminalNode> getPossibleExpressionNodes(NonTerminalNode node) {
+        ExpressionNodeValidator nodeValidator = new ExpressionNodeValidator();
+        // Identify the sub-expressions to be extracted
+        List<NonTerminalNode> nodeList = new ArrayList<>();
+        while (node != null && !isStatementOrModuleMemberDeclarationNode(node) && node.kind() != SyntaxKind.OBJECT_FIELD
+                && !nodeValidator.isInvalidNode()) {
+            nodeList.add(node);
+            node = node.parent();
+            node.accept(nodeValidator);
+        }
+        return nodeList;
+    }
+
+    private static boolean isStatementOrModuleMemberDeclarationNode(NonTerminalNode node) {
+        return node instanceof StatementNode || node instanceof ModuleMemberDeclarationNode;
+    }
+
+    /**
+     * The method is used to get the text edits which includes function call edit and the function definition edit.
+     */
+    private List<TextEdit> getTextEdits(CodeActionContext context,
+                                        Node matchedCodeActionNode,
+                                        boolean newLineAtEnd,
+                                        TypeSymbol typeSymbol,
+                                        List<String> argsForExtractFunction,
+                                        List<String> argsForReplaceFunctionCall,
+                                        Range functionInsertRange) {
+        String functionName = getFunctionName(context, matchedCodeActionNode);
+        String function = getFunction(context, matchedCodeActionNode, newLineAtEnd, typeSymbol, functionName,
+                argsForExtractFunction);
+
+        String replaceFunctionCall = getReplaceFunctionCall(argsForReplaceFunctionCall, functionName, true);
+
+        TextEdit extractFunctionEdit = new TextEdit(functionInsertRange, function);
+        TextEdit replaceEdit = new TextEdit(PositionUtil.toRange(matchedCodeActionNode.lineRange()),
+                replaceFunctionCall);
+        return List.of(extractFunctionEdit, replaceEdit);
     }
 
     /**
@@ -414,9 +515,9 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
         return isExpr ? funcCall : funcCall + CommonKeys.SEMI_COLON_SYMBOL_KEY;
     }
 
-    private String getFunction(CodeActionContext context, NonTerminalNode matchedNode, boolean newLineEnd, 
+    private String getFunction(CodeActionContext context, Node matchedNode, boolean newLineEnd,
                                TypeSymbol typeSymbol, String functionName, List<String> args) {
-        String returnsClause = 
+        String returnsClause =
                 String.format("returns %s", FunctionGenerator.getReturnTypeAsString(context, typeSymbol.signature()));
         String returnStatement;
 
@@ -458,29 +559,41 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
                 .collect(Collectors.toList()));
     }
 
-    private Optional<ArgListsHolder> getArgLists(CodeActionContext context, List<Symbol> symbolsList) {
+    private Optional<ArgListsHolder> getArgLists(CodeActionContext context, List<Symbol> symbolsList,
+                                                 NonTerminalNode matchedCodeActionNode) {
         List<String> argsForExtractFunction = new ArrayList<>();
         List<String> argsForReplaceFunctionCall = new ArrayList<>();
+        List<String> symbolNamesList = new ArrayList<>();
 
         for (Symbol symbol : symbolsList) {
             if (symbol.getName().isEmpty()) {
                 return Optional.empty();
             }
-            argsForReplaceFunctionCall.add(symbol.getName().get());
+            symbolNamesList.add(symbol.getName().get());
+        }
 
-            Optional<String> possibleType = Optional.empty();
-            if (symbol.kind() == SymbolKind.VARIABLE) {
-                possibleType = CodeActionUtil
-                        .getPossibleType(((VariableSymbol) symbol).typeDescriptor(), new ArrayList<>(), context);
+        ExtractToFunctionTypeFinder typeFinder = new ExtractToFunctionTypeFinder(symbolNamesList);
+        typeFinder.findType(matchedCodeActionNode);
+        Map<String, NonTerminalNode> symbolTypes = typeFinder.getSymbolTypes();
+        List<String> sortedSymbolNames = new ArrayList<>();
 
-            } else if (symbol.kind() == SymbolKind.PARAMETER) {
-                possibleType = CodeActionUtil
-                        .getPossibleType(((ParameterSymbol) symbol).typeDescriptor(), new ArrayList<>(), context);
+        for (Map.Entry<String, NonTerminalNode> entry : symbolTypes.entrySet()) {
+            sortedSymbolNames.add(entry.getKey());
+        }
+        sortedSymbolNames.sort(Comparator.comparing(symbolNamesList::indexOf));
+
+        for (String symbolName : sortedSymbolNames) {
+            Optional<TypeSymbol> typeSymbol = context.currentSemanticModel().get().typeOf(symbolTypes.get(symbolName));
+            if (typeSymbol.isEmpty()) {
+                return Optional.empty();
             }
+            Optional<String> possibleType =
+                    CodeActionUtil.getPossibleType(typeSymbol.get(), new ArrayList<>(), context);
             if (possibleType.isEmpty()) {
                 return Optional.empty();
             }
-            argsForExtractFunction.add(String.format("%s %s", possibleType.get(), symbol.getName().get()));
+            argsForExtractFunction.add(String.format("%s %s", possibleType.get(), symbolName));
+            argsForReplaceFunctionCall.add(symbolName);
         }
 
         ArgListsHolder argListsHolder = new ArgListsHolder();
@@ -558,8 +671,7 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
                 && (parentKind != SyntaxKind.ASSIGNMENT_STATEMENT
                 || !((AssignmentStatementNode) node.parent()).varRef().equals(node))
                 && (parentKind != SyntaxKind.COMPOUND_ASSIGNMENT_STATEMENT
-                || !((CompoundAssignmentStatementNode) node.parent()).lhsExpression().equals(node))))
-                && parentKind != SyntaxKind.CLIENT_DECLARATION;
+                || !((CompoundAssignmentStatementNode) node.parent()).lhsExpression().equals(node))));
     }
 
     public static List<SyntaxKind> getSupportedExpressionSyntaxKindsList() {
@@ -609,7 +721,39 @@ public class ExtractToFunctionCodeAction implements RangeBasedCodeActionProvider
     }
 
     private static class ArgListsHolder {
+
         private List<String> extractFunctionArgs;
         private List<String> replaceFunctionCallArgs;
+    }
+
+    static class ExtractToFunctionTypeFinder extends NodeVisitor {
+
+        List<String> symbolNamesList;
+        Map<String, NonTerminalNode> nodeList = new LinkedHashMap<>();
+
+        public ExtractToFunctionTypeFinder(List<String> symbolNamesList) {
+            this.symbolNamesList = symbolNamesList;
+        }
+
+        public Map<String, NonTerminalNode> getSymbolTypes() {
+            return nodeList;
+        }
+
+        public void findType(NonTerminalNode matchedCodeActionNode) {
+            if (matchedCodeActionNode.kind() == SyntaxKind.LIST) {
+                for (Node node : matchedCodeActionNode.children()) {
+                    node.accept(this);
+                }
+                return;
+            }
+            matchedCodeActionNode.accept(this);
+        }
+
+        @Override
+        public void visit(SimpleNameReferenceNode simpleNameReferenceNode) {
+            symbolNamesList.stream().filter(symbolName -> !nodeList.containsKey(symbolName)
+                    && symbolName.equals(simpleNameReferenceNode.name().text())).findFirst().ifPresent(symbolName ->
+                    nodeList.put(symbolName, simpleNameReferenceNode));
+        }
     }
 }
